# dspick

./: .gitignore  Config.py  Prediction.py  README.md  a.bash  a.py  a.sh  b.bash  b.py  c.bash  c.py  c.zsh  completion.py  config.toml  dspi.py  dspick  dspick.bash  dspick.fish  dspick.py  dspick.zsh  main.py  prediction.py  pyproject.toml  signature.py  utils.py  zshcomp.sh
Config/: Config.py  config.toml
config/: config.py  config_menu.py  curses_menu.py  file_config.py  menu.py  npyscreen_menu.py  questionary_menu.py  reader_config.py
inspiration/: config_menu.py  emufzf.py  fzf_menu.py  menufzf.py  urwid_menu.py
optimizer/: data.json  dataset.py  few_shot_optimizer.py  optimize.py  optimizer.py  reset.py
prediction/: chain_of_thought.py  data.json  data.spanish.json  dataset.py  few_shot_optimizer.py  prediction.py  signature.py
screens/: demo.apng  language.apng  multiple.apng  not_perfect.apng
