[project]
name = "dspick"
version = "0.1.0"
description = " Like Navi, but with DSPy under the hood—ask, get a CLI command, done. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=2.6.27",
    "ipykernel>=6.29.5",
    "npyscreen>=4.10.5",
    "prompt-toolkit>=3.0.51",
    "questionary>=2.1.0",
    "rich>=14.0.0",
    "tomli-w>=1.2.0",
    "urwid>=3.0.2",
]
